--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
             </div>
         </main>
+        <script src="https://github.com/Promo/wheel-indicator/blob/master/lib/wheel-indicator.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="js/script.js"></script>
     </body>
