--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <main>
-            <div class="main-block" data-aos="fade-in" data-aos-duration="500">
+            <div class="main-block" data-aos="fade-up" data-aos-anchor-placement="top-top" data-aos-duration="15000">
                 <header class="header" id="header" >
                     <div class="container">
                         <a href="" class="logo"><img src='assets/img/logo_white.svg'></a>
